# study_tools

./: .gitignore  README.md  agents.md  chunking_model_report.md  summary.md  todo.md
Dev/: CONTRIBUTING.md  README.md  agents.yaml  config.yaml  pyproject.toml  requirements.txt  schema.json
Dev/docs/: MIGRATE_LARGE_FILES.md  TODO.md  changelog.md  overview.md
Dev/src/study_tools/: __init__.py  build_index.py  cli_chat.py  flashcards.py  ingest.py  reset.py  summarize.py  utils.py
Dev/tests/: test_imports.py
messy_start/: README.md  build_index.py  chat.py  config.json  flashcards.py  ingest.py  reset.py  summarize.py  summarize_improved.py  summarize_stable_3.py  test.py  utils.py
messy_start/chroma/: index_store.json
messy_start/docs/: file_audit.md
messy_start/docs/Woche 1/: Excel zu Video 2.2.xlsx
messy_start/docs/Woche 2/Videos/: Excel zu Video 4.2.xlsx
messy_start/docs/Woche 3/Videos/: Excel zu Video 6.4.xlsx  Excel zu Videos 6.1, 6.2, 6.3.xlsx
messy_start/legacy/: build_index copy 3.py  build_index copy.py  build_index_stable.py  docs_oold.md  summarize copy.py  summarize_stable.py  summarize_stable_2.py
schema/: example_learning_unit.json
